fixed header bug on mobile

--- a/skygap/static/css/skygap.css
+++ b/skygap/static/css/skygap.css
@@ -343,7 +343,7 @@ li {
 
 /* Main menu */
 .header > .container {
-  
+  min-width: 100vw;
   background-color: var(--white);
 }
 
@@ -359,7 +359,7 @@ li {
   flex-direction: row;
   align-items: center;
   padding: 0;
-  position: relative;
+  /* position: relative; */
 }
 
 .navigation > ul > * {
